<resources>
    <string name="app_name">StudyApp</string>
    <string name="action_settings">Settings</string>
    <string name="name">WELCOME TO STUDY APP</string>

    <string name="teach_login">Teacher Login</string>
    <string name="stu_login">Student Login</string>
    <string name="title_activity_student_login">StudentLogin</string>
    <string name="title_activity_teacher_login">TeacherLogin</string>
    <string name="title_activity_logged_in_teacher">LoggedInTeacher</string>

    <string name="upload_img">Upload Image</string>
    <string name="upload_videos">Upload Videos</string>
    <string name="upload_presentaion">Upload Presentations</string>
    <string name="title_activity_student_registration">StudentRegistration</string>
    <string name="title_activity_teacher_registration">TeacherRegistration</string>


    <string name="nam">Name</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="submit">Submit</string>
</resources>
