<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prateek.studyapp.LoggedInTeacherFragment"
    tools:showIn="@layout/activity_logged_in_teacher">

    <Button
        android:id="@+id/images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_img"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/videos"
        android:layout_below="@id/images"
        android:text="@string/upload_videos"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/presentation"
        android:layout_below="@id/videos"
        android:text="@string/upload_presentaion"/>

</RelativeLayout>
