<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prateek.studyapp.MainActivityFragment"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/text_head"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:id="@+id/student"
        android:text="@string/stu_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/pad_top"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/student"
        android:text="@string/teach_login"
        android:id="@+id/teacher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/pad_top"/>

</RelativeLayout>
